5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1594_1802.log
== SUBMITION (2019-04-04 16:20:40) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1))+((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.169683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1))+((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:06) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.159503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:06) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.14333
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:07) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.223474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:07) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.195531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:07) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.106558
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/1802/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:10) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.209157
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:10) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.193547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:10) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.285683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:11) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.15527
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:11) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.140327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:11) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.195931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1802/main.py", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:21:12) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(srqt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    a=(srqt(5*D1)) + ((pi)**(D2/3))
NameError: name 'srqt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:21:35) 
-- CODE:
from math import*

p=int(input("Insira a vida inicial:"))
D1=int(input("Insira o primeiro valor do dado:"))
D2=int(input("Insira o segundo valor dado:"))


a=(sqrt(5*D1)) + ((pi)**(D2/3))
dano=p-a+1
print(int(dano))

-- EXECUTION TIME:
0.199053
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
